# supreme-code

./: .gitignore  .gitmodules  AGENTS.md  PlatformConfig.uml  chapter-client-part.md  docker-compose.yml  economic-calc.xlsx  economic.docx  flyway_schema_history.uml  index.html  kube.http  kubernetes.drawio  otchet-plan.md  otchet.docx  plan.md  platform-plan.md  platform.yaml  pom.xml  practice-changelog.md  practice-titul.docx  practice.docx  preza.pptx  readme.md  requests.http  supreme_code.uml  taskrunner.uml  testrunner.uml  todo.md  vkr-plan.md  ВПР2024-Задание_на_ВКР.docx  ВПР2024-Отзыв_руководителя_ВКР.docx  Диплом-Голосуев-2024_06_11.docx  Заявление_на_размещение_ВКР_в_ЭБС.docx  Протокол_предзащиты.docx
.run/: TestRunnerApplication.run.xml  WebApplication.run.xml  start lsp.run.xml  start mcp.run.xml
allure-report/: .gitignore  package-lock.json  package.json  readme.md
common-plugins/: pom.xml
content-repository/: pom.xml
docker/: build-all.sh
docker/cpp/: CMakeLists.txt  Dockerfile  build.sh  sc_test.cc  solution.hpp
docs/: platform-plan.md  todo.md
frontend/: .pnp.cjs  Dockerfile  nginx.conf  package.json  postcss.config.js  tsconfig.json  vite-gh.config.ts  vite.config.ts
init-rdb/: database.sql
lsp/: docker-compose.yml
lsp-manager/: package-lock.json  package.json
lsp-manager-docker/: Dockerfile  config.json  package-lock.json  package.json  requests.http
lsp-manager2/: requests.http  tsconfig.json
lsp-ws-bridge/: Dockerfile  main.ts  package.json
mcp/: package-lock.json  package.json  tsconfig.json
plugin-sdk/: pom.xml
(+664 files in other folders)
